# runtime-error

./: .gitignore.scanner  CAPTURE_MODE_SWITCHING.md  DOCKER-GUIDE.md  LAUNCH-BACKGROUND.bat  LAUNCH.bat  Makefile  Makefile.scanner  QUICKSTART.txt  README.md  SCANNER_COMPLETE.md  SCANNER_FEATURES.md  SCANNER_INDEX.md  SCANNER_INTEGRATION.md  SCANNER_QUICKSTART.md  SCANNER_SUMMARY.md  SECURITY_SCANNER_README.md  START_HERE.md  STOP.bat  TESTING_MODE_SWITCH.md  compose.yaml  config.example.json  scanner.env.example  streamlit_app.py  targets.example.txt
Cyber Project/: DOCKER-GUIDE.md  FIXES-APPLIED.md  FIXES-SUMMARY.md  LAUNCH-BACKGROUND.bat  LAUNCH.bat  MODE-SEPARATION-GUIDE.md  Makefile  PCAP-FIX-SUMMARY.md  PCAP-UPLOAD-GUIDE.md  QUICKSTART.txt  README.md  SETUP-FIX.md  STOP.bat  capture_real_traffic.bat  check_interfaces.py  compose.host.yaml  compose.yaml  generate_activity.bat  test-fixes.bat  wireshark_capture.bat
Cyber Project/backend/: Dockerfile  app.py  guardian.db  pyproject.toml
Cyber Project/backend/capture/: __init__.py  device_fingerprint.py  docker_monitor.py  live_sniffer.py  pcap_reader.py
Cyber Project/backend/core/: __init__.py  config.py  security.py
Cyber Project/backend/db/: __init__.py  models.py  repo.py
Cyber Project/backend/detection/: __init__.py  features.py  heuristics.py  model.py
Cyber Project/backend/schemas/: alerts.py  devices.py  traffic.py
Cyber Project/backend/scripts/: generate_synthetic_pcap.py
Cyber Project/backend/tests/: test_features.py
Cyber Project/backend/uploads/: sample.pcap
backend/: .env.example  app.py  (+5 more)
(+79 files in other folders)
