[tool.poetry]
name = "home-net-guardian-backend"
version = "1.0.0"
description = "Home network security monitoring system backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlmodel = "^0.0.14"
scapy = "^2.5.0"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
websockets = "^12.0"
aiofiles = "^23.2.1"
httpx = "^0.25.2"
netaddr = "^0.9.0"
psutil = "^5.9.6"
numpy = "^1.26.2"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107"]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
